<resources>
    <string name="app_name">ShowcaseApp</string>

    <!--Strings Actividad 1 -->
    <string name="acm_btn_bd">Contactos</string>
    <string name="acm_btn_camara">Cámara</string>
    <string name="acm_btn_galeria">Galería</string>
    <string name="acm_image_logo">Logo</string>
    <string name="acm_imagebtn_play">Boton play</string>
    <string name="acm_imagebtn_pause">Boton pause</string>

    <!--Strings Actividad 2 -->
    <string name="ac2_btn_volver">Volver</string>
    <string name="ac2_btn_add">Añadir</string>
    <string name="ac2_import">Importar</string>
    <string name="ac2_export">Exportar</string>

    <!--Strings Actividad 3 -->
    <string name="ac3_error">Captura de imagen fallida: </string>
    <string name="ac3_capture">Captura de imagen satisfactoria: </string>
    <string name="ac3_btn_capture">Capturar</string>
    <string name="ac3_btn_switch_cam">Cambiar camara</string>
    <string name="ac3_btn_volver">Volver</string>

    <!--Strings Actividad 4 -->
    <string name="ac4_btn_discard">Boton discard</string>
    <string name="ac4_btn_borrar">Borrar</string>
    <string name="ac4_btn_volver">Volver</string>
    <string name="count_images">{0,choice,0#Nada seleccionado|1#1 elemento seleccionado|1&lt;{0} elementos seleccionados}</string>

    <!--Strings Contact CardView -->
    <string name="ccv_icon">Icono de contacto</string>

    <!--Strings Contact add Fragment -->
    <string name="caf_editText_name_hint">Nombre</string>
    <string name="caf_editText_tel_hint">Telefono</string>
    <string name="caf_editText_info_hint">Descripción</string>
    <string name="caf_btn_add">Boton Añadir</string>
    <string name="caf_btn_volver">Boton volver</string>
    <string name="caf_btn_image">Boton añadir imagen</string>
    <string name="caf_name_ico_description">Icono de nombre</string>
    <string name="caf_tel_ico_description">Icono de telefono</string>
    <string name="caf_info_ico_description">Icono de descripción</string>

    <!--Strings Contact info Fragment -->
    <string name="cif_editText_name_hint">Escribe nombre..</string>
    <string name="cif_editText_tel_hint">Escribe telefono..</string>
    <string name="cif_editText_info_hint">Escribe descripción..</string>
    <string name="cif_btn_add">Editar</string>
    <string name="cif_imagebtn_edit">Boton editar</string>
    <string name="cif_imagebtn_borrar">Boton borrar</string>
    <string name="cif_btn_volver">Boton volver</string>

    <!-- Contact list Fragment -->
    <string name="clf_btn_search">Boton buscar</string>
    <string name="clf_editText_search">Buscar</string>
    <string name="clf_btn_add">Boton Añadir</string>

    <!--Image Preview Fragment -->
    <string name="ipf_btn_save">Boton guardar</string>
    <string name="ipf_btn_borrar">Boton borrar</string>
    <string name="ipf_image">Muestra imagen capturada</string>
    <!-- Imagen CardView -->
    <string name="icv_imageButton_image">Image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>