<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBG"
    tools:context=".activities.ContactsActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/caf_btn_volver"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|start"
            android:scaleType="centerInside"
            android:backgroundTint="@color/appBG"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow"
            android:contentDescription="@string/ac2_btn_volver"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/ac2_titulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/acm_btn_bd"
            android:textColor="#474545"
            android:textSize="37sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/caf_btn_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:scaleType="centerInside"
            android:backgroundTint="@color/appBG"
            android:layout_marginEnd="8dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/ac2_btn_add"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ac2_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:translationZ="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:defaultNavHost="true"
        app:navGraph="@navigation/contact_activity_nav_graph"/>

    <LinearLayout
        android:id="@+id/ac2_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationZ="90dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.075">

        <TextView
            android:id="@+id/ac2_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_border"
            android:gravity="center_vertical"
            android:paddingStart="18dp"
            android:paddingTop="10dp"
            android:paddingEnd="18dp"
            android:paddingBottom="10dp"
            android:text="@string/ac2_import"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ac2_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:gravity="center_vertical"
            android:paddingStart="18dp"
            android:paddingTop="10dp"
            android:paddingEnd="18dp"
            android:paddingBottom="10dp"
            android:text="@string/ac2_export"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>