<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/appBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cif_top_panel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/cif_btn_volver"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|start"
            android:scaleType="centerInside"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginStart="8dp"
            android:src="@drawable/arrow"
            android:contentDescription="@string/ac2_btn_volver"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/cif_titulo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cif_title"
            android:textColor="#474545"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/cif_btn_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:scaleType="centerInside"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:src="@drawable/check"
            android:contentDescription="@string/ac2_btn_add"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cif_top_panel"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/caf_btn_add_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circular_shape"
            android:backgroundTint="#D1D1D1"
            android:clickable="false"
            android:contentDescription="@string/caf_btn_image"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/caf_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:hint="@string/caf_editText_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="@integer/material_motion_duration_long_2"
            android:paddingTop="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caf_btn_add_image"
            app:layout_constraintVertical_bias="0.01999998"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/caf_tel_linear"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="0.18">

        <ImageView
            android:id="@+id/caf_tel_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/caf_tel_ico_description"
            app:srcCompat="@android:drawable/ic_menu_call"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/caf_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/caf_editText_tel_hint"
            android:importantForAutofill="no"
            android:inputType="none"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/caf_info_linear"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caf_tel_linear"
        app:layout_constraintVertical_bias="0.060000002">

        <ImageView
            android:id="@+id/caf_info_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/caf_tel_ico_description"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <EditText
            android:id="@+id/caf_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/caf_editText_info_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/caf_btn_borrar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/appBG"
        android:contentDescription="@string/cif_imagebtn_borrar"
        android:scaleType="centerInside"
        android:src="@drawable/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caf_info_linear"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>